# podcast-rag

./: .dockerignore  .env.docker.example  .env.example  .env.production  .env.production.example  .file_search_cache.json  .gitignore  AGENTS.md  CLAUDE.md  DEPLOY_QUICK_START.md  DOCKER.md  Dockerfile  Dockerfile.web  GEMINI.md  MIGRATION_SUMMARY.md  PLAN.md  README.md  README_WEB.md  TEST_SUMMARY.md  WEB_APP_SUMMARY.md  a2as.yaml  alembic.ini  app.py  cloudbuild.yaml  commit_msg.txt  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  podcast_feeds.txt  podgrab-export.opml  pyproject.toml  requirements.txt  test_feeds.opml  test_podcasts.opml
.github/workflows/: docker-release.yml  release.yml  test.yml
alembic/: env.py
alembic/versions/: 20241205_0001_001_initial_schema.py  20251206_1850_6986ebc1ec9f_add_retry_count_fields.py  20251207_1930_832704312906_add_transcript_text_column.py  20251213_1400_45f51e111866_add_user_auth_tables.py  20251214_0500_047c460554c9_add_is_admin_field.py  20251214_0600_a1b2c3d4e5f6_add_email_digest_preferences.py  20251214_0700_b2c3d4e5f6a7_add_user_timezone_and_digest_hour.py  20251222_0929_b6be3bac19d4_add_ai_email_content_column.py  20251224_1200_c3d4e5f6a7b8_add_chat_tables.py  20251225_0900_d4e5f6a7b8c9_add_conversation_message_count.py  20251228_1145_e5f6a7b8c9d0_add_podcast_description_indexing.py  20260116_1000_f6a7b8c9d0e1_remove_is_subscribed_field.py  20260116_1200_g7b8c9d0e1f2_add_youtube_support.py  20260328_1859_9e9bcd1d5fb9_add_daily_briefings_table.py  20260330_2030_6f17f64a4c34_add_feed_performance_indexes.py  20260619_1200_a1b2c3d4e5f6_add_briefing_audio_fields.py  20260619_1200_dd7777d4445b_add_briefing_audio_fields.py
data/: podcast_rag.db
docker/: Dockerfile  Dockerfile.frontend  README.md  docker-compose.yml  run.sh
docs/: WEB_ARCHITECTURE.md  configuration.md  deploy-quick-start.md  deploy-vps.md  docker.md  faster-whisper-benchmark.md  rss-feed-plan.md  web-app.md
frontend/: .gitignore  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.css
frontend/src/components/: Footer.js  Header.js
frontend/src/hooks/: usePodcasts.js
frontend/src/pages/: EpisodeDetailPage.js  HomePage.js  ImportExportPage.js  PodcastDetailPage.js  PodcastListPage.js
frontend/src/services/: api.js
prompts/: archive_question.txt  metadata_extraction.txt  podcast_snippet.txt
scripts/: backfill_email_content.py  backfill_last_new_episode.py  backup-db.sh  backup_audio_to_r2.py  benchmark_faster_whisper.py  benchmark_whisperx.py  bulk_index_transcripts.py  export_sqlite_to_sql.py  file_search_utils.py  import_opml.py  index_backlog.py  index_descriptions.py  init_db.py  migrate-prod-db.sh  migrate_keywords_to_array.py  migrate_legacy_transcripts.py  migrate_sqlite_to_postgres.py  migrate_to_file_search.py  migrate_transcripts_to_db.py  profile_file_search_filter.py  rebuild_cache.py  reindex_with_types.py  run_web.sh  setup_cloud_run_env.sh  sync-dev-db.sh  test_email.py  test_web_api.sh  verify-db-clone.sh
src/: app.py  argparse_shared.py  chroma_search.py  chroma_vectordb.py  config.py  download_and_transcribe.py  download_podcasts.py  file_manager.py  gemini_search.py  init_workflow.py  list_feeds.py  main.py  mcp_server.py  metadata_extractor.py  opml_importer.py  podcast_download_service.py  podcast_downloader.py  podcast_rag_pipeline.py  prompt_manager.py  rag.py  scheduler.py  schemas.py  transcribe_podcasts.py  transcription_service.py
src/agents/: __init__.py  chat_tools.py  orchestrator.py  podcast_search.py  synthesizer.py  web_search.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  podcasts.py
src/cli/: __init__.py  podcast_commands.py
src/core/: config.py  podcast.py
src/data/: podcast_rag.db
src/db/: __init__.py  chroma_vectordb.py  database.py  factory.py  gemini_file_search.py  metadatadb.py  models.py  repository.py
src/podcast/: __init__.py  downloader.py  feed_parser.py  feed_sync.py  opml_parser.py
src/prompts/: chat_agent.txt  episode_analysis.txt  episode_context.txt  episode_discovery_search.txt  episode_identification.txt  file_search_query.txt  global_context.txt  podcast_analysis.txt  podcast_context.txt  podcast_discovery_search.txt  podcast_identification.txt  podcast_search_agent.txt  query_classification.txt  subscriptions_context.txt
src/services/: __init__.py  briefing_audio.py  briefing_generator.py  email_renderer.py  email_service.py  feed_service.py  tts.py
src/static/css/: style.css
src/static/js/: search.js
src/templates/: base.html  index.html  podcasts.html  results.html
src/util/: __init__.py  opml_importer.py
src/utils/: __init__.py  metadata_utils.py
src/web/: __init__.py  admin_routes.py  app.py  auth.py  auth_routes.py  chat_routes.py  models.py  podcast_routes.py  user_routes.py
src/web/static/: admin.html  auth.js  chat-drawer.css  chat-drawer.js  chat.css  chat.html  chat.js  common.css  episode.html  feed.html  (+9 more)
src/workflow/: __init__.py  config.py  orchestrator.py  post_processor.py
src/youtube/: __init__.py  api_client.py  captions.py  channel_sync.py  models.py
tests/: README.md  TEST_COVERAGE_SUMMARY.md  conftest.py  test_admin_routes.py  test_agents.py  test_argparse_shared.py  test_audio_endpoint.py  test_auth.py  test_auth_routes.py  test_briefing_audio.py  test_briefing_audio_repo.py  test_briefing_audio_script.py  test_briefing_generator.py  test_cache_logic.py  test_chat_drawer_validation.py  test_chat_routes.py  test_chat_scopes.py  test_chat_tools.py  test_cli_commands.py  test_daily_briefing.py  test_database.py  test_description_indexing.py  test_download_podcasts.py  test_downloader.py  test_email_content.py  test_email_digest.py  test_email_service.py  test_feed_parser.py  test_feed_sync.py  test_file_manager.py  test_frontend_validation.py  test_gemini_file_search.py  test_gemini_search.py  test_list_feeds.py  test_mcp_server.py  test_metadata_utils.py  test_metadatadb.py  test_migrate_transcripts.py  test_opml_importer.py  test_opml_parser.py  (+19 more)
(+11 files in other folders)
